<resources>
    <string name="app_name">BantuanBencana</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="Anonymous">
        <item>Anonymous</item>
        <item>Username</item>
    </string-array>
    <string name="progressLoading">Loading...</string>
    <string name="registerbtn">Register now!</string>
    <string name="login">Login</string>

    <string name="registerTitle">REGISTER</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordVerification">confirmation password</string>
    <string name="fullname">Full name</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>

    <string name="passwordConfirmationNotMatch">Password confirmation is not match!</string>
    <string name="emptyTextInput">Insert all data before continue!</string>
    <string name="wrongEmail">Please insert your email!</string>
    <string name="usernameTaken">Username already taken!</string>

</resources>
